--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Caffe Studio Design Lab</h1>
-            <p>questo è un test per provare il funzionamento di una Node app in remoto</p>
+            <p>questo è un test per provare il funzionamento di caffe studio app in remoto</p>
             <p>la app è ststa realizzata interamente in remoto su Github e sincronizzata con Heroku</p>
             <p>i moduli npm usati (dependencies) sono express, ejs e path</p>
         </div>
